[project]
name = "python-singles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.5",
    "bs4>=0.0.2",
    "click>=8.3.0",
    "jinja2>=3.1.6",
    "keyboard>=0.13.5",
    "matplotlib>=3.10.6",
    "mycolorpy>=1.5.1",
    "networkx>=3.5",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "praw>=7.8.1",
    "pypdf>=6.1.0",
    "pyxel>=2.5.7",
    "pyyaml>=6.0.2",
    "repertorio>=0.0.2",
    "requests>=2.32.5",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "spotipy>=2.25.1",
    "statsmodels>=0.14.5",
    "steam>=1.4.4",
    "xlsxwriter>=3.2.9",
]
